2011-02-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetype_extensions.conf:
   Fix detecting Matlab and Txt2Tags extensions by default (#3167315,
   #3154637).


2011-02-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tagmanager/latex.c:
   Add a workaround for #3066566 to prevent Geany from crashing during
   loading of a LaTeX-file containing linebreaks inside headings.


2011-02-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/php.c:
   Fix memory leaks (reported by an anonymous IRC user).
 * doc/geany.txt, doc/geany.html:
   Replace '+' by '-' in the Scintilla Keybindings section
   to be consistent with the other mentioned keybindings.
 * src/project.c:
   Improve error checking when trying to write project files
   (patch by Colomban Wendling, thanks).
   Add a warning if writing the project file fails on close.
 * src/utils.c, src/utils.h, src/project.c, src/main.c, src/socket.c:
   Rename utils_is_file_writeable() into utils_is_file_writable().


2011-01-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Ensure the editor widget has the focus when the editor menu is
   called.
 * scintilla/lexers/LexCOBOL.cxx, scintilla/src/Catalogue.cxx,
   scintilla/Makefile.am, scintilla/makefile.win32, src/highlighting.c,
   src/plugindata.h, src/filetypes.c, src/filetypes.h, src/editor.c,
   src/symbols.c, tagmanager/parsers.h, tagmanager/makefile.win32,
   tagmanager/cobol.c, tagmanager/Makefile.am, data/filetypes.cobol,
   data/filetype_extensions.conf, wscript:
   Add filetype Cobol (based on a patch by Seth Keiper).


2011-01-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/filebrowser.c:
   Add '.pyc' to the list of hidden object files
   (patch by Filip Gruszczyński, thanks).


2011-01-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * *.*:
   Update copyright information.
 * configure.ac, doc/geany.html, doc/geany.txt, geany.nsi,